fixed register & store

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -35,12 +35,14 @@
       src="./pages/Javascripts/jquery-1.9.1.min.js"
       defer=""
     ></script>
+    <!--nicepage js-->
     <script
       class="u-script"
       type="text/javascript"
       src="./pages/Javascripts/nicepage.js"
       defer=""
     ></script>
+    <!--google font-->
     <link
       id="u-theme-google-font"
       rel="stylesheet"
