fixed register & black market

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -272,12 +272,12 @@
         What about Mother?
       </h1>
       <p class="u-text u-text-2">
-        Mother is an AI that gets you whatever you need whenever you need it,
-        either be some advice, documents, music, videos/ movies, apps,
-        transportation or even ask Mother to do a specific function according to
-        your needs/ wants. Mother works by representing you in the online world
-        enabling her to be able to buy goods and services on your behalf
-        whenever youre too busy to do it yourself.
+        Mother is an AI (Artificial Intelligence) that gets you whatever you
+        need whenever you need it, either be some advice, documents, music,
+        videos/ movies, apps, transportation or even ask Mother to do a specific
+        function according to your needs/ wants. Mother works by representing
+        you in the online world enabling her to be able to buy goods and
+        services on your behalf whenever youre too busy to do it yourself.
         <a
           href="./pages/services.html"
           class="
