--- a/dedicated/pages/18/index.html
+++ b/dedicated/pages/18/index.html
@@ -87,8 +87,8 @@
                               <div class="image_1"><img src="images/klipdrift strong.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">The premium vodka is here ORDER NOW</h1>
-                              <p class="banner_text">P250</p>
+                              <h1 class="banner_taital">Klipdrift season</h1>
+                              <p class="banner_text">BWP: 250</p>
                               <p class="banner_text">LIMITED STOCK</p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
@@ -103,7 +103,7 @@
                               <div class="image_1"><img src="images/castle lite.jpg"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">Castle lite clearance sale</h1>
+                              <h1 class="banner_taital">Clearance sale</h1>
                               <p class="banner_text">order online for only P20 per bottle </p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
@@ -114,13 +114,13 @@
                      <div class="container">
                         <div class="row">
                            <div class="col-md-7">
-                              <div class="best_text">Bankies</div>
-                              <div class="image_1"><img src="images/weed.jpg"></div>
+                              <div class="best_text">Champion beer</div>
+                              <div class="image_1"><img src="images/blackie.jpg"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">Yes! weed is also available</h1>
-                              <p class="banner_text">1 blunt = P10</p>
-                              <p class="banner_text">1 banky = P15</p>
+                              <h1 class="banner_taital">Everyone's fav available as well</h1>
+                              <p class="banner_text">1 quart = P30</p>
+                              <p class="banner_text">1 crate = P150</p>
                               <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
                            </div>
                         </div>
@@ -156,7 +156,7 @@
                      <p class="lorem_text">The Corona cigar is available</p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
-                        <h4 class="price_text">Price <span style=" color: #f7c17b">P</span> <span style=" color: #325662">150</span></h4>
+                        <h4 class="price_text">Price <span style=" color: #f7c17b">BWP</span> <span style=" color: #325662">150</span></h4>
                      </div>
                   </div>
                </div>
@@ -168,7 +168,7 @@
                      <p class="lorem_text">A special blend of cigar for the bigshots!</p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
-                        <h4 class="price_text">Price <span style=" color: #f7c17b">P</span> <span style=" color: #325662">200</span></h4>
+                        <h4 class="price_text">Price <span style=" color: #f7c17b">BWP</span> <span style=" color: #325662">200</span></h4>
                      </div>
                   </div>
                   <div class="col-md-6">
@@ -192,7 +192,7 @@
                      <p class="lorem_text">Guess what sex toys are available as well. bet you didnt expect that like we said we want to cater for anyone's needs and wants. small toys to large hehehe</p>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="#">Buy Now</a></div>
-                        <h4 class="price_text">Price <span style=" color: #f7c17b">P</span> <span style=" color: #325662">50<200</span></h4>
+                        <h4 class="price_text">Price <span style=" color: #f7c17b">BWP</span> <span style=" color: #325662">50<200</span></h4>
                      </div>
                   </div>
                </div>
@@ -292,7 +292,7 @@
                      <div class="box_main_1">
                         <div class="zoomout frame"><img src="images/img-6.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Speed cycle</h2>
+                           <h2 class="speed_text">Speed</h2>
                            <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
                            <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
                         </div>
