--- a/dedicated/pages/About.html
+++ b/dedicated/pages/About.html
@@ -271,7 +271,7 @@
                     meaning to say the AI is a digital software hosted online with access to the entire web thus has no need nor has a valid reason to sell or disribute your personal data since it's code is monitored closely by local trusted developers countrywide. Buy or sell any kinds of goods on Mother's marketplace, connect with brands, potential clients and partners through Mother!<br></br>
                   </p>
                   <a href="./register/register.html" class="u-btn u-button-style u-btn-1">Get started</a>
-                  <a href="./register/login.html" class="u-btn u-button-style u-btn-1">Login</a>
+                  <a href="./register/Login.html" class="u-btn u-button-style u-btn-1">Login</a>
                 </div>
               </div>
             </div>
