--- a/dedicated/pages/register/login.html
+++ b/dedicated/pages/register/login.html
@@ -1,83 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login V3</title>
+    <title>Document</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="./login/images/icons/favicon.ico" />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" href="./reg.css"
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div class="limiter">
-      <div
-        class="container-login100"
-        style="background-image: url('images/bg-01.jpg')"
-      >
-        <div class="wrap-login100">
-          <form class="login100-form validate-form">
-            <span class="login100-form-logo">
-              <i class="zmdi zmdi-landscape"></i>
-            </span>
-
-            <span class="login100-form-title p-b-34 p-t-27">
-              Log in with Google account</span
-            >
-
-            <div
-              class="wrap-input100 validate-input"
-              data-validate="Enter username"
-            >
-              <input
-                class="input100"
-                type="text"
-                name="username"
-                placeholder="Username"
-              />
-              <span class="focus-input100" data-placeholder="&#xf207;"></span>
-            </div>
-
-            <div
-              class="wrap-input100 validate-input"
-              data-validate="Enter password"
-            >
-              <input
-                class="input100"
-                type="password"
-                name="pass"
-                placeholder="Password"
-              />
-              <span class="focus-input100" data-placeholder="&#xf191;"></span>
-            </div>
-
-            <div class="contact100-form-checkbox">
-              <input
-                class="input-checkbox100"
-                id="ckb1"
-                type="checkbox"
-                name="Policy check"
-              />
-              <label class="label-checkbox100" for="ckb1">
-                By logging in I accept Kevstar’s
-                <a href="Policy.html">terms & conditions</a>
-              </label>
-            </div>
-
-            <div class="container-login100-form-btn">
-              <button class="login100-form-btn">Login</button>
-            </div>
-
-            <div class="container-login100-form-btn">
-              <button class="login100-form-btn">Register</button>
-            </div>
-
-            <div class="text-center p-t-90">
-              <a class="txt1" href="#"> Forgot Password? </a>
-            </div>
-          </form>
-        </div>
-      </div>
+    <link rel="stylesheet" href="./login.css" />
+    <div class="login">
+      <h1>Login</h1>
+      <form method="post" id="loginform">
+        <input
+          type="text"
+          name="u"
+          placeholder="Username"
+          required="required"
+        />
+        <input
+          type="password"
+          name="p"
+          placeholder="Password"
+          required="required"
+        />
+        <button type="submit" class="btn btn-primary btn-block btn-large">
+          Verify login
+        </button>
+      </form>
     </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
