--- a/dedicated/pages/18/index.html
+++ b/dedicated/pages/18/index.html
@@ -10,9 +10,9 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>Black market</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <meta name="keywords" content="adult shop">
+      <meta name="description" content="A marketplace for adults">
+      <meta name="author" content="Mother">
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
@@ -35,23 +35,23 @@
       <!-- header section start -->
       <div class="header_section header_bg">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="index.html" class="logo"><img src="images/log.png"></a>
+            <a href="index.html" class="logo"><img src="../images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                     <a class="nav-link" href="index.html">Home</a>
+                     <a class="nav-link" href="../../Home.html">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
+                     <a class="nav-link" href="../About.html">About</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="cycle.html">Our Cycle</a>
+                     <a class="nav-link" href="cycle.html">Our vision</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="shop.html">Shop</a>
+                     <a class="nav-link" href="../Shop.html">Shop</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="news.html">News</a>
@@ -264,8 +264,8 @@
                            </div>
                            <div class="client_right">
                               <div class="quote_icon"><img src="images/quote-icon.png"></div>
-                              <p class="client_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-                              <h3 class="client_name">Channery</h3>
+                              <p class="client_text">I love their quick responces and service delivery.</p>
+                              <h3 class="client_name">Kutlo</h3>
                            </div>
                         </div>
                      </div>
@@ -292,9 +292,9 @@
                      <div class="box_main_1">
                         <div class="zoomout frame"><img src="images/img-6.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Speed</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+                           <h2 class="speed_text">Reviews</h2>
+                           <div class="post_text">Post by : Yaya <span style="float: right;">20-04-2021</span></div>
+                           <p class="long_text">Better than Ebay. delivery straight at your front door!? AMAZING</p>
                         </div>
                      </div>
                   </div>
@@ -302,9 +302,9 @@
                      <div class="box_main_1">
                         <div class="zoomout frame"><img src="images/img-7.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Speed cycle</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+                           <h2 class="speed_text">Reviews</h2>
+                           <div class="post_text">Post by : Den <span style="float: right;">27-05-2021</span></div>
+                           <p class="long_text">Thank you for being a life savior. we need this. 24/7 service availability and no downtimes</p>
                         </div>
                      </div>
                   </div>
@@ -312,9 +312,9 @@
                      <div class="box_main_1">
                         <div class="zoomout frame"><img src="images/img-8.png"></div>
                         <div class="padding_15">
-                           <h2 class="speed_text">Jaump cycle</h2>
-                           <div class="post_text">Post by : Den <span style="float: right;">20-12-2019</span></div>
-                           <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
+                           <h2 class="speed_text">Reviews</h2>
+                           <div class="post_text">Post by : Boitshepo <span style="float: right;">19-06-2021</span></div>
+                           <p class="long_text">Smart</p>
                         </div>
                      </div>
                   </div>
@@ -359,9 +359,9 @@
                   </div>
                </div>
                <div class="col-lg-4 col-sm-12">
-                  <div class="call_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_0">Page when looking at its layou</span></a></div>
-                  <div class="call_text"><a href="#"><img src="images/call-icon.png"><span class="padding_left_0">Call Now  +01 123467890</span></a></div>
-                  <div class="call_text"><a href="#"><img src="images/mail-icon.png"><span class="padding_left_0">demo@gmail.com</span></a></div>
+                  <div class="call_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_0">visit us</span></a></div>
+                  <div class="call_text"><a href="#"><img src="images/call-icon.png"><span class="padding_left_0">Call customer service +26772293757</span></a></div>
+                  <div class="call_text"><a href="#"><img src="images/mail-icon.png"><span class="padding_left_0">solidbigshot@protonmail.com</span></a></div>
                   <div class="social_icon">
                      <ul>
                         <li><a href="#"><img src="images/fb-icon1.png"></a></li>
