--- a/dedicated/pages/18/index.html
+++ b/dedicated/pages/18/index.html
@@ -63,7 +63,7 @@
                <form class="form-inline my-2 my-lg-0">
                   <div class="login_menu">
                      <ul>
-                        <li><a href="https://Kevstar0.github.io/dedicated/Home">logout</a></li>
+                        <li><a href="../Shop.html">logout</a></li>
                         <li><a href="#"><img src="images/trolly-icon.png"></a></li>
                         <li><a href="#"><img src="images/search-icon.png"></a></li>
                      </ul>
