--- a/dedicated/pages/register/register.html
+++ b/dedicated/pages/register/register.html
@@ -13,10 +13,10 @@
   </head>
 
   <body>
+    <div class="alert">Account created successfully, Welcome</div>
     <div>
         <form id="registrationform">
                   <h3 class="text-warning text-center pt-5">Register into <a href="https://kevstar0.github.io/dedicated/Home">Mother</a></h3>
-                  <div class="alert">Account created successfully, Welcome</div>
                   <!--profile selector here-->
                   <label>
                     <input type="text" class="input" name="email" placeholder="Email" id="Email" required/><div class="line-box">
@@ -107,24 +107,23 @@
                            placeholder="Confirm password" required/>
                     <div class="line-box">
                       <br>
-                      <p><em><strong>DO NOT forget your password use a password manager/ write it down for safe keeping. failure to do so will penalize you with either account suspension or a fine of P50 if you ever forget it</strong></em></p>
+                      <p>Play safe</p>                      
                       <div class="line"></div>
                     </di>
                   </label>
                   <!-- checkbox for terms and conditions-->
-                  <input type="checkbox" id="checkbx" required/>Accept <a href="../Policy.html">terms & conditions</a>
+                  <input type="checkbox" id="checkbx" required/>Accept <a href="../Policy.html">Terms & Conditions</a>
                   </div>
                   <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <button type="submit">Create account</button>
-                  <button a href="../login.html">Login</a></button>
-                </form>       
+                  <div><button class="float" type="submit">Create account</button></section>
+                  <button class="float2" a href="../login.html">Login</a></button></div>
+                </form>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class="alert">Account created successfully, Welcome</div>       
             </div>
             <!-- The core Firebase JS SDK is always required and must be listed first -->
             <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
