--- a/dedicated/pages/register/register.html
+++ b/dedicated/pages/register/register.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="alert">Account created successfully, Welcome</div>
+    <div class="alert">Account created successfully, Wait to be redirected</div>
     <div>
         <form id="registrationform">
                   <h3 class="text-warning text-center pt-5">Register into <a href="https://kevstar0.github.io/dedicated/Home">Mother</a></h3>
@@ -123,7 +123,7 @@
                 <br>
                 <br>
                 <br>
-                <div class="alert">Account created successfully, Welcome</div>       
+                <div class="alert">Account created successfully, wait to be redirected</div>       
             </div>
             <!-- The core Firebase JS SDK is always required and must be listed first -->
             <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
