--- a/dedicated/pages/register/register.html
+++ b/dedicated/pages/register/register.html
@@ -19,19 +19,19 @@
                   <h3 class="text-warning text-center pt-5">Register into <a href="https://kevstar0.github.io/dedicated/Home">Mother</a></h3>
                   <!--profile selector here-->
                   <label>
-                    <input type="text" class="input" name="email" placeholder="Email" id="Email" required/><div class="line-box">
+                    <input type="email" class="input" name="email" placeholder="Email" id="Email" required/><div class="line-box">
                       <div class="line"></div>
                     </div>
                   </label>
 
                   <label>
-                    <input type="text" class="input" name="name" placeholder="Name" id="Name" required/><div class="line-box">
+                    <input minlength="2" type="text" class="input" name="name" placeholder="Name" id="Name" required/><div class="line-box">
                       <div class="line"></div>
                     </div>
                   </label>
 
                   <label>
-                    <input type="text" class="input" name="surname" placeholder="Surname" id="Surname" required/><div class="line-box">
+                    <input minlength="2" type="text" class="input" name="surname" placeholder="Surname" id="Surname" required/><div class="line-box">
                       <div class="line"></div>
                     </div>
                   </label>
@@ -66,7 +66,7 @@
                 </select>
 
                   <label>
-                    <input type="number" class="input" name="phone" placeholder="Phone" id="Number"/><div class="line-box">
+                    <input minlength="8" type="number" class="input" name="phone" placeholder="Phone" id="Number"/><div class="line-box">
                       <div class="line"></div>
                     </div>
                   </label>
@@ -78,6 +78,7 @@
                     <input
                           id="Username"
                            type="text"
+                           minlength="5"
                            class="input" 
                            name="Username"
                            placeholder="Create a username" required/>
@@ -89,6 +90,7 @@
                   <label>
                     <input
                            type="password"
+                           minlength="8"
                            id="Passwrd"
                            class="input"
                            name="password"
@@ -101,6 +103,7 @@
                   <label>
                     <input
                            type="password"
+                           minlength="8"
                            id="Verpasswrd"
                            class="input"
                            name="passwordconfirm"
