main page update

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -269,15 +269,22 @@
       id="carousel_0422"
     >
       <h1 class="u-custom-font u-font-montserrat u-text u-text-1">
-        What about Mother?
+        A coders dream...
       </h1>
       <p class="u-text u-text-2">
-        Mother is an AI (Artificial Intelligence) that gets you whatever you
-        need whenever you need it, either be some advice, documents, music,
-        videos/ movies, apps, transportation or even ask Mother to do a specific
-        function according to your needs/ wants. Mother works by representing
-        you in the online world enabling her to be able to buy goods and
-        services on your behalf whenever youre too busy to do it yourself.
+        You know we all dream big and that is nice, My mother really likes to
+        praise me about it that wonderful but somehow that blind sighted me
+        about reality. yet at the same time made me learn new things. Dear
+        people this is how much I love to code, it is fun and exciting. If the
+        reality of it is that i dont need another coder in my life then... what
+        is it? I already have it??? is this the end??? the limit??? NO! I refuse
+        to accept that, If it werent for coding you're right I already got what
+        I need for the time being but there are requirement to be met at moments
+        in time to make sure you sleep well tonight and you eat right tomorrow
+        <br />
+        and that is what we do as humans we try to survive as much as possible
+        so please promote your boy, cool tech down below check it out 🙃
+
         <a
           href="./pages/services.html"
           class="
@@ -294,8 +301,7 @@
           "
           >It is worth it. Try it!</a
         >. With the power of Tensors & HTML5 these combined computing languages
-        allows me to service you and simultaneiously entertain you whenever
-        wherever you're! how cool.<br />
+        cool tech to check out.<br />
         <br />Image from
         <a
           href=""
@@ -377,7 +383,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-4">Smart houses</h5>
+              <h5 class="u-text u-text-4">Smart gadgets</h5>
               <a
                 href="./pages/SmartHouse.html"
                 class="
@@ -392,7 +398,7 @@
                   u-text-body-color
                   u-btn-3
                 "
-                >Learn more</a
+                >See more</a
               >
             </div>
           </div>
@@ -461,7 +467,7 @@
                   u-text-body-color
                   u-btn-4
                 "
-                >learn more</a
+                >See more</a
               >
             </div>
           </div>
@@ -515,7 +521,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-8">More about Mother</h5>
+              <h5 class="u-text u-text-8">More about coding</h5>
               <a
                 href="./pages/About.html"
                 class="
@@ -584,7 +590,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-10">Oppotunities with Mother</h5>
+              <h5 class="u-text u-text-10">Oppotunities with coding</h5>
               <a
                 href="./pages/oppotunities.html"
                 class="
