head story fixed

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -274,16 +274,22 @@
       <p class="u-text u-text-2">
         You know we all dream big and that is nice, My mother really likes to
         praise me about it that wonderful but somehow that blind sighted me
-        about reality. yet at the same time made me learn new things. Dear
-        people this is how much I love to code, it is fun and exciting. If the
-        reality of it is that i dont need another coder in my life then... what
-        is it? I already have it??? is this the end??? the limit??? NO! I refuse
+        about reality. At the same time it made me learn new things in a short
+        period of time. Dear people this is how much I love to code, it is fun
+        and exciting you code for a few minutes at night the next thing you know
+        it's 6am in the morning. If the reality of it is that I dont need
+        another coder involved then what is it i need? something is missing and
+        I wanna find out what it is!
+        <br />
+        If already have it??? is this the end of it??? the limit??? NO! I refuse
         to accept that, If it werent for coding you're right I already got what
-        I need for the time being but there are requirement to be met at moments
-        in time to make sure you sleep well tonight and you eat right tomorrow
+        I need for the time being but there are requirements to be met at
+        moments in time to make sure you sleep well tonight and you eat right
+        tomorrow
         <br />
         and that is what we do as humans we try to survive as much as possible
-        so please promote your boy, cool tech down below check it out 🙃
+        so please promote your boy and his affiliates, cool tech down below
+        check it out 🙃
 
         <a
           href="./pages/services.html"
