--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -101,7 +101,7 @@
                 u-text-active-palette-1-base
                 u-text-hover-palette-2-base
               "
-              href="#"
+              href="https://kevstar0.github.io/dedicated/Home"
               style="padding: 4px 14px; font-size: calc(1em + 8px)"
             >
               <svg><use xlink:href="#menu-hamburger"></use></svg>
@@ -135,7 +135,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Home.html"
+                  href="https://kevstar0.github.io/dedicated/Home"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -187,7 +187,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./pages/Shop.html"
+                  href="./Botswana online market.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -241,7 +241,7 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="./pages/Shop.html"
+                      href="./Botswana online market.html"
                       >Shop</a
                     >
                     <!-- End of Nav -->
@@ -281,18 +281,20 @@
         another coder involved then what is it i need? something is missing and
         I wanna find out what it is!
         <br />
+        <br />
         If already have it??? is this the end of it??? the limit??? NO! I refuse
         to accept that, If it werent for coding you're right I already got what
         I need for the time being but there are requirements to be met at
         moments in time to make sure you sleep well tonight and you eat right
         tomorrow
         <br />
+        <br />
         and that is what we do as humans we try to survive as much as possible
-        so please promote your boy and his affiliates, cool tech down below
-        check it out 🙃
+        so please promote your boy and his affiliates,👇 cool tech down below
+        check it out 🙃.
 
         <a
-          href="./pages/services.html"
+          href="./K-market.html"
           class="
             u-border-1
             u-border-active-palette-2-light-3
@@ -306,11 +308,11 @@
             u-btn-1
           "
           >It is worth it. Try it!</a
-        >. With the power of Tensors & HTML5 these combined computing languages
-        cool tech to check out.<br />
+        >. I am going to fascinate you with effects of javascript, HTML5 & CSS
+        with ease. show you how good I am with it cool tech here check out.<br />
         <br />Image from
         <a
-          href=""
+          href="./K-market.html"
           class="
             u-active-none
             u-border-1
@@ -323,7 +325,7 @@
             u-text-body-color
             u-btn-2
           "
-          >Author's image choices</a
+          >Kevstar image choices</a
         >
         <br />
       </p>
@@ -613,117 +615,6 @@
                 "
                 >browse</a
               >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- AI section -->
-    <section class="u-clearfix u-section-2" id="sec-fd15">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div
-          class="
-            u-align-left
-            u-border-3
-            u-border-color-2-base
-            u-expanded-width
-            u-left-0
-            u-shape
-            u-shape-1
-          "
-        ></div>
-        <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout">
-            <div class="u-layout-row">
-              <div
-                class="
-                  u-align-left
-                  u-container-style
-                  u-layout-cell
-                  u-left-cell
-                  u-size-43
-                  u-layout-cell-1
-                "
-              >
-                <div
-                  class="
-                    u-container-layout u-valign-middle u-container-layout-1
-                  "
-                >
-                  <h3 class="u-text u-text-1">Try Mother<br /></h3>
-                  <p class="u-text u-text-2">
-                    I can get anything for you, just say your wish after
-                    activating your mic with the mic button on the right (under
-                    maintanance sorry for any incovinience caused)<br />
-                  </p>
-                </div>
-              </div>
-              <!-- AI mic -->
-              <div
-                class="
-                  u-align-left
-                  u-container-style
-                  u-layout-cell
-                  u-right-cell
-                  u-size-17
-                  u-layout-cell-2
-                "
-                data-href=" --#--"
-              >
-                <p>Listen now</p>
-
-                <div class="u-container-layout u-container-layout-2">
-                  <span
-                    class="u-icon u-icon-circle u-text-palette-1-base u-icon-1"
-                    data-href=""
-                    ><svg
-                      class="u-svg-link"
-                      preserveAspectRatio="xMidYMin slice"
-                      viewBox="0 0 512 512"
-                    >
-                      <use xlink:href="#svg-4b29"></use></svg
-                    ><svg
-                      class="u-svg-content"
-                      viewBox="0 0 512 512"
-                      x="0px"
-                      y="0px"
-                      id="svg-4b29"
-                      style="enable-background: new 0 0 512 512"
-                    >
-                      <g>
-                        <g>
-                          <path
-                            d="M256,0c-49.456,0-89.693,40.237-89.693,89.693v176.279c0,49.45,40.237,89.687,89.693,89.687    c49.456,0,89.693-39.957,89.693-89.071V89.693C345.693,40.237,305.456,0,256,0z M308.315,266.583    c0,28.503-23.47,51.698-52.315,51.698s-52.321-23.464-52.321-52.315V89.693c0-28.851,23.47-52.321,52.321-52.321    s52.321,23.47,52.315,52.321V266.583z"
-                          ></path>
-                        </g>
-                      </g>
-                      <g>
-                        <g>
-                          <rect
-                            x="237.314"
-                            y="409.226"
-                            width="37.372"
-                            height="84.088"
-                          ></rect>
-                        </g>
-                      </g>
-                      <g>
-                        <g>
-                          <path
-                            d="M305.207,474.628h-98.414c-10.321,0-18.686,8.365-18.686,18.686c0,10.321,8.365,18.686,18.686,18.686h98.414    c10.321,0,18.686-8.365,18.686-18.686C323.893,482.993,315.528,474.628,305.207,474.628z"
-                          ></path>
-                        </g>
-                      </g>
-                      <g>
-                        <g>
-                          <path
-                            d="M397.392,234.822c-10.321,0-18.686,8.365-18.686,18.686v14.949c0,67.656-55.049,122.706-122.706,122.706    c-67.662,0-122.706-55.049-122.706-122.706v-14.949c0-10.321-8.365-18.686-18.686-18.686s-18.686,8.365-18.686,18.686v14.949    c0,88.267,71.811,160.078,160.078,160.078s160.078-71.811,160.078-160.078v-14.949    C416.078,243.188,407.713,234.822,397.392,234.822z"
-                          ></path>
-                        </g>
-                      </g></svg
-                  ></span>
-                </div>
-              </div>
             </div>
           </div>
         </div>
