--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coder's life choices</title>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
     <script src="./package.json"></script>
     <link
@@ -29,7 +33,7 @@
         <section>
         <input type="checkbox" required><p>I am above 18 years of age</p>
         </section>
-        <p>create <a href="register.html"/>new account</p>
+        <p> OR create a <a href="register.html"/>new account</p>
         <button id="login-btn">
           <script src="node_modules/firebaseui/package.json"></script>
           Login
@@ -37,13 +41,27 @@
       </div>
     </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
 
-      <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-      <script src="/__/firebase/8.7.1/firebase-analytics.js"></script>
-
-      <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyA6XmqP76EBAG1XHZhtbJn6lDDagYH14xI",
+    authDomain: "aqueous-encoder-301807.firebaseapp.com",
+    databaseURL: "https://aqueous-encoder-301807-default-rtdb.firebaseio.com",
+    projectId: "aqueous-encoder-301807",
+    storageBucket: "aqueous-encoder-301807.appspot.com",
+    messagingSenderId: "1012545270359",
+    appId: "1:1012545270359:web:2f1eaf15ac45e14312e912",
+    measurementId: "G-HKQ1DCN73M"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   </body>
 </html>
