--- a/Home.html
+++ b/Home.html
@@ -11,31 +11,25 @@
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
-    <script src="./package.json"></script>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.css"
-    />
     <link type="text/css" rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body id="Access-portal">
     <div align="center" id="user">
-    <h1>HELLO KEVIN</h1>
+    <h1>Welcome to the Orange 5G beta channel</h1>
     <p>what do you want to do?</p>
-    <p>I want some 5G</p>
+    <p>You want some 5G?... login</p>
     </div>
     <div>
-      <div align="center" id="auth-handler">
+      <div align="center">
         <input type="email" required id="email">
         <input type="password" required id="passwrd">
         <br>
         <section>
         <input type="checkbox" required><p>I am above 18 years of age</p>
         </section>
-        <p> OR create a <a href="register.html"/>new account</p>
+        <p> OR create a <a href="register.html">new account</a></p>
         <button id="login-btn">
-          <script src="node_modules/firebaseui/package.json"></script>
+          <script src="./js/index.js"></script>
           Login
         </button>
       </div>
