--- a/Home.html
+++ b/Home.html
@@ -29,33 +29,18 @@
         </section>
         <p> OR create a <a href="register.html">new account</a></p>
         <button id="login-btn">
-          <script src="./js/index.js"></script>
           Login
-        </button>
+        </button><script src="./js/index.js"></script>
       </div>
     </div>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyA6XmqP76EBAG1XHZhtbJn6lDDagYH14xI",
-    authDomain: "aqueous-encoder-301807.firebaseapp.com",
-    databaseURL: "https://aqueous-encoder-301807-default-rtdb.firebaseio.com",
-    projectId: "aqueous-encoder-301807",
-    storageBucket: "aqueous-encoder-301807.appspot.com",
-    messagingSenderId: "1012545270359",
-    appId: "1:1012545270359:web:2f1eaf15ac45e14312e912",
-    measurementId: "G-HKQ1DCN73M"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
+    <script src="js/index.js"></script>
+    <script>
+      firebase.auth().onAuthStateChanged(function(user)
+      {
+        if(user) {
+          window.location.href = "subscriptions.html"
+        }
+      });
+    </script>
   </body>
 </html>
